<resources>
    <string name="app_name">Agenda de Treinos</string>
    <string name="azzz">Cadastrar Novo Exercicio</string>
    <string name="treino">Treino</string>
    <string name="exercicio">Exercicio</string>
    <string name="nome">Nome</string>
    <string name="inserir">Inserir</string>
    <string name="modificar">Modificar</string>
    <string name="listar">Listar</string>
    <string name="buscar">Buscar</string>
    <string name="excluir">Excluir</string>
    <string name="codigo">Codigo</string>
    <string name="descricao">Descricao</string>
    <string name="grupo">Grupo Muscular</string>
    <string name="reps">Repeticoes</string>
    <string name="series">Series</string>
    <string name="lista">Lista</string>
    <string name="treinolista">Lista de treinos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>