<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentExercicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExercicioFragment">

    <EditText
        android:id="@+id/etCodigoEx"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etNomeEx"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarEx"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloEx" />

    <Button
        android:id="@+id/btnBuscarEx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="43dp"
        android:text="@string/buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etCodigoEx"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNomeEx"
        android:layout_width="334dp"
        android:layout_height="48dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etDescEx"
        app:layout_constraintEnd_toEndOf="@+id/etCodigoEx"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toEndOf="@+id/etCodigoEx"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscarEx"
        app:layout_constraintVertical_bias="0.235" />

    <EditText
        android:id="@+id/etDescEx"
        android:layout_width="334dp"
        android:layout_height="48dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="31dp"
        android:ems="10"
        android:hint="@string/descricao"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnInserirEx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="88dp"
        android:text="@string/inserir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescEx" />

    <Button
        android:id="@+id/btnModificarEx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="36dp"
        android:text="@string/modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescEx" />

    <Button
        android:id="@+id/btnExcluirEx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/excluir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirEx" />

    <Button
        android:id="@+id/btnListarEx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:text="@string/listar"
        app:layout_constraintEnd_toEndOf="@+id/btnModificarEx"
        app:layout_constraintTop_toBottomOf="@+id/btnModificarEx" />

    <TextView
        android:id="@+id/tvListarEx"
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etGrupoEx" />

    <TextView
        android:id="@+id/tvTituloEx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/exercicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etGrupoEx"
        android:layout_width="334dp"
        android:layout_height="48dp"
        android:layout_marginTop="314dp"
        android:layout_marginBottom="150dp"
        android:ems="10"
        android:hint="@string/grupo"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tvListarEx"
        app:layout_constraintEnd_toEndOf="@+id/etDescEx"
        app:layout_constraintStart_toStartOf="@+id/etDescEx"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>